--- a/DevDay.Mobile/DevDay.Mobile/DevDay.Mobile.Android/Properties/AndroidManifest.xml
+++ b/DevDay.Mobile/DevDay.Mobile/DevDay.Mobile.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
-	<uses-sdk android:minSdkVersion="15" android:targetSdkVersion="19" />
-	<application></application>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" package="DevDay_2014.DevDay_2014">
+	<uses-sdk android:minSdkVersion="10" android:targetSdkVersion="19" />
+	<application android:label="DevDay 2014" android:icon="@drawable/ic_launcher"></application>
 </manifest>
