--- a/DevDay.Mobile/DevDay.Mobile/DevDay.Mobile.WinPhone/DevDay.Mobile.WinPhone.csproj
+++ b/DevDay.Mobile/DevDay.Mobile/DevDay.Mobile.WinPhone/DevDay.Mobile.WinPhone.csproj
@@ -143,6 +143,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="README_FIRST.txt" />
+    <BundleResource Include="small_icon.png" />
     <Content Include="Toolkit.Content\ApplicationBar.Add.png" />
     <Content Include="Toolkit.Content\ApplicationBar.Cancel.png" />
     <Content Include="Toolkit.Content\ApplicationBar.Check.png" />
@@ -168,6 +169,9 @@
     <Reference Include="Xamarin.Forms.Xaml">
       <HintPath>..\..\packages\Xamarin.Forms.1.0.6186\lib\WP80\Xamarin.Forms.Xaml.dll</HintPath>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Assets\Images\" />
   </ItemGroup>
   <Import Project="..\DevDay.Mobile\DevDay.Mobile.projitems" Label="Shared" Condition="Exists('..\DevDay.Mobile\DevDay.Mobile.projitems')" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).$(TargetFrameworkVersion).Overrides.targets" />
